[package]
name = "rag-example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
qdrant-client = "1.14.0"
rig-core = { version = "0.12.0", features = ["all"] }
rig-qdrant = "0.1.13"
serde = "1.0.219"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
